# ai-data-automation-studio

./: .env.example  .gitattributes  .gitignore  Dockerfile  MVP_Build_Plan.docx  claude.md  docker-compose.yml  pyproject.toml  railway.toml
.claude/: settings.local.json
.claude/agents/: ai-workflow-engineer.md  backend-engineer.md  data-engineer.md  frontend-engineer.md  infra-engineer.md  orchestrator.md  qa-engineer.md  security-reviewer.md
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_create_file_asset.py
apps/api/src/adas_api/: config.py  main.py
apps/api/src/adas_api/db/: session.py
apps/api/src/adas_api/db/models/: file_asset.py
apps/api/src/adas_api/routers/: files.py
apps/api/src/adas_api/schemas/: file_asset.py  profile.py
apps/api/src/adas_api/services/: profile_service.py
apps/api/src/adas_api/storage/: __init__.py  base.py  local.py  s3.py
apps/api/tests/: conftest.py  test_files_api.py
apps/web/: Dockerfile  next.config.ts  package.json  railway.toml
apps/web/src/app/: layout.tsx
apps/web/src/app/upload/: page.tsx
apps/web/src/lib/: api-client.ts
apps/web/src/types/: profile.ts
backlog/: product-backlog.md  sprint-1-plan.md  technical-backlog.md
decisions/: decisions-log.md
docs/: AI_Data_Automation_Studio_PRD.docx  AI_Data_Automation_UX_UI_Product_Spec.docx  AI_Data_Automation_Workflow_Definition_Schema.docx  PROJECT_PLAN.docx  dev-setup.md  railway-deploy.md  workflow-definition-schema-v0.1.json
tests/: test_smoke.py
(+3 files in other folders)
